Added new folder and files to repository
added js files with functions to operate on an html file

--- a/Basic JavaScript Projects/Project1_expressions_alert/index.html
+++ b/Basic JavaScript Projects/Project1_expressions_alert/index.html
@@ -4,11 +4,16 @@
         <meta charset="utf-8">
         <title>Hello World!</title>
         <script src="./JS/main.js"></script>
+        <br>
     </head>
     <body>
         <button onclick="myFunction()" id="Button_Text">
             Click me NOW!
         </button>
+        <br>
+        <p>Press a key. Any key at all!</p>
+        <input onkeydown="buttonPress()">
+        <p id = "keyPress"></p>
     </body>
 
 </html>
